# OpenCorde

./: README.md  example_usage.py  pyproject.toml  update_opencode_models.py
docs/: INTERPOSER_SPEC.md
src/horde_openai/: __init__.py  client.py  models.py  server.py  translate.py
tests/: test_interposer.py
